<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CounterActivity">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="82dp"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="28dp"
        android:text="@string/result"
        android:textColor="@color/colorGreen"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="215dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorGreen"
        android:textSize="18dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resultText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/untilText"
        android:layout_width="82dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/until"
        android:textColor="@color/colorGreen"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />

    <TextView
        android:id="@+id/untilView"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorGreen"
        android:textSize="18dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/untilText"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />

    <TextView
        android:id="@+id/paymentText"
        android:layout_width="82dp"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="28dp"
        android:text="@string/payment"
        android:textColor="@color/colorGreen"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/untilText" />

    <TextView
        android:id="@+id/paymentView"
        android:layout_width="215dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorGreen"
        android:textSize="18dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paymentText"
        app:layout_constraintTop_toBottomOf="@+id/untilView" />

    <TextView
        android:id="@+id/remarksText"
        android:layout_width="82dp"
        android:layout_height="240dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/remark"
        android:textColor="@color/colorGreen"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentText" />

    <TextView
        android:id="@+id/remarksView"
        android:layout_width="215dp"
        android:layout_height="240dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorGreen"
        android:textSize="18dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/remarksText"
        app:layout_constraintTop_toBottomOf="@+id/paymentView" />

    <Button
        android:id="@+id/startParkingBtn"
        android:layout_width="201dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_button2"
        android:textAllCaps="false"
        android:onClick="pause"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>